[gd_scene load_steps=9 format=3]

[ext_resource type="Script" path="res://scripts/main.gd" id=1]
[ext_resource type="PackedScene" path="res://scenes/player.tscn" id=2]
[ext_resource type="Script" path="res://scripts/build_manager.gd" id=3]
[ext_resource type="Script" path="res://scripts/ui.gd" id=4]
[ext_resource type="PackedScene" path="res://scenes/buildings/stronghold_core.tscn" id=5]
[ext_resource type="Texture2D" path="res://assets/ui/ui_panel_frame_small_256x128_v001.png" id=6]
[ext_resource type="Texture2D" path="res://assets/ui/ui_bar_xp_384x16_v001.png" id=7]
[ext_resource type="Texture2D" path="res://assets/ui/ui_bar_xp_empty_384x16_v001.png" id=8]
[ext_resource type="Texture2D" path="res://assets/ui/ui_icon_gold_32_v001.png" id=9]
[ext_resource type="Texture2D" path="res://assets/ui/ui_panel_frame_medium_384x192_v001.png" id=10]

[node name="Main" type="Node2D"]
script = ExtResource(1)

[node name="World" type="Node2D" parent="."]

[node name="Player" parent="World" instance=ExtResource(2)]
position = Vector2(120, 0)

[node name="Enemies" type="Node2D" parent="World"]

[node name="Projectiles" type="Node2D" parent="World"]

[node name="FX" type="Node2D" parent="World"]

[node name="Buildings" type="Node2D" parent="World"]

[node name="StrongholdCore" parent="World/Buildings" instance=ExtResource(5)]
position = Vector2(0, 0)

[node name="Pickups" type="Node2D" parent="World"]

[node name="Breakables" type="Node2D" parent="World"]

[node name="BuildManager" type="Node" parent="."]
script = ExtResource(3)

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource(4)

[node name="HUD" type="Control" parent="UI"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0

[node name="HudFrame" type="TextureRect" parent="UI/HUD"]
position = Vector2(8, 8)
size = Vector2(256, 128)
texture = ExtResource(6)
mouse_filter = 2

[node name="GoldIcon" type="TextureRect" parent="UI/HUD"]
position = Vector2(20, 22)
size = Vector2(32, 32)
texture = ExtResource(9)
mouse_filter = 2

[node name="XPBar" type="TextureProgressBar" parent="UI/HUD"]
position = Vector2(280, 16)
size = Vector2(384, 16)
texture_under = ExtResource(8)
texture_progress = ExtResource(7)
mouse_filter = 2

[node name="Resources" type="Label" parent="UI/HUD"]
position = Vector2(60, 24)
text = "Resources: 0"

[node name="Time" type="Label" parent="UI/HUD"]
position = Vector2(24, 48)
text = "Time: 0.0"

[node name="Selection" type="Label" parent="UI/HUD"]
position = Vector2(24, 142)
text = ""

[node name="Controls" type="Label" parent="UI/HUD"]
position = Vector2(24, 162)
text = ""

[node name="Level" type="Label" parent="UI/HUD"]
position = Vector2(24, 72)
text = "Level: 1"

[node name="TechPanel" type="TextureRect" parent="UI/HUD"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -96.0
offset_right = 192.0
offset_bottom = 96.0
texture = ExtResource(10)
mouse_filter = 2

[node name="Title" type="Label" parent="UI/HUD/TechPanel"]
position = Vector2(16, 12)
text = "Tech Pick - Choose 1"

[node name="Option1" type="Label" parent="UI/HUD/TechPanel"]
position = Vector2(48, 44)
text = "1) "

[node name="Option1Icon" type="TextureRect" parent="UI/HUD/TechPanel"]
position = Vector2(16, 40)
size = Vector2(24, 24)
mouse_filter = 2

[node name="Option2" type="Label" parent="UI/HUD/TechPanel"]
position = Vector2(48, 78)
text = "2) "

[node name="Option2Icon" type="TextureRect" parent="UI/HUD/TechPanel"]
position = Vector2(16, 74)
size = Vector2(24, 24)
mouse_filter = 2

[node name="Option3" type="Label" parent="UI/HUD/TechPanel"]
position = Vector2(48, 112)
text = "3) "

[node name="Option3Icon" type="TextureRect" parent="UI/HUD/TechPanel"]
position = Vector2(16, 108)
size = Vector2(24, 24)
mouse_filter = 2

[node name="Hint" type="Label" parent="UI/HUD/TechPanel"]
position = Vector2(16, 148)
text = "Press 1, 2, or 3"
